Jar with javafx inside